--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8090
+  port: 8091
 
 spring:
   datasource:
@@ -18,3 +18,7 @@ management:
     web:
       exposure:
         include: "*"
+
+auth:
+  api:
+    url: http://xd-mau5.xyz:8090/
