--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.4'
 	testImplementation 'org.springframework.security:spring-security-test:6.0.2'
 	implementation 'com.nimbusds:nimbus-jose-jwt:9.30.2'
+	implementation 'org.apache.commons:commons-text:1.10.0'
 }
 
 tasks.named('test') {
