--- a/build.gradle
+++ b/build.gradle
@@ -20,23 +20,24 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
-	implementation 'org.springframework.boot:spring-boot-starter-web:3.0.4'
+	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
 	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'
 	implementation 'org.springframework.boot:spring-boot-starter-security:3.0.4'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux:3.0.4'
 	compileOnly 'org.projectlombok:lombok:1.18.26'
 	runtimeOnly 'com.mysql:mysql-connector-j:8.0.32'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5',
 			'io.jsonwebtoken:jjwt-jackson:0.11.5'
-	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok:1.18.26'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.4'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
 	testImplementation 'org.springframework.security:spring-security-test:6.0.2'
 	implementation 'com.nimbusds:nimbus-jose-jwt:9.30.2'
 	implementation 'org.apache.commons:commons-text:1.10.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:3.0.7'
 }
 
 tasks.named('test') {
